Edited wiki page Resources through web user interface.

--- a/wiki/Resources.wiki
+++ b/wiki/Resources.wiki
@@ -5,3 +5,4 @@
   * [http://aws.amazon.com/articles/1394 Building for Performance and Reliability with Amazon SimpleDB]
   * [http://media.amazonwebservices.com/pdf/AWS_Security_Whitepaper.pdf AWS Security whitepaper]
   * [http://media.amazonwebservices.com/Whitepaper_Security_Best_Practices_2010.pdf AWS Security best practices]
+  * [http://www.ibm.com/developerworks/java/library/j-javadev2-9/ Java development 2.0: Cloud storage with Amazon's SimpleDB, Part 1]
